# weaviate-community.rust

./: .gitignore  LICENSE  README.md  docker-compose.yml  start_local.sh
.circleci/: config.yml  versions.sh
weaviate-client-unofficial/: Cargo.toml
weaviate-client-unofficial/src/: backups.rs  batch.rs  lib.rs  schema.rs
weaviate-community/: Cargo.toml  README.md
weaviate-community/src/: backups.rs  batch.rs  classification.rs  collections.rs  lib.rs  meta.rs  modules.rs  nodes.rs  objects.rs  oidc.rs  query.rs  schema.rs  utils.rs
weaviate-community/src/collections/: auth.rs  backups.rs  batch.rs  classification.rs  error.rs  meta.rs  mod.rs  modules.rs  nodes.rs  objects.rs  oidc.rs  query.rs  schema.rs
weaviate-community/tests/: .rustc_info.json  backups.rs  batch.rs  client.rs  meta.rs  nodes.rs  objects.rs  oidc.rs  schema.rs  temp
weaviate_client_community/: Cargo.toml
weaviate_client_community/src/: classification.rs  nodes.rs  objects.rs  oidc.rs  schema.rs
