[package]
name = "weaviate-community"
version = "0.1.0"
description = "community weaviate client library"
keywords = ["weaviate", "vector"]
repository = ""
documentation = ""
authors = ["Sam Pewton <s.pewton@outlook.com>"]
readme = "README.md"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1" }
serde = { version = "1.0", features = ["derive"] }
