[package]
name = "weaviate-community"
# Update the README version number when updating crates.io
# Create a new git tag
version = "0.2.0"
repository = "https://github.com/Sam-Pewton/weaviate-community.rust"
authors = ["Sam Pewton <s.pewton@outlook.com>"]
readme = "README.md"
license = "MIT"
edition = "2021"
description = """
Community client for handling Weaviate vector database transactions written in Rust, for Rust.
"""
categories = ["asynchronous", "database", "vectors"]
keywords = ["weaviate", "vector", "database"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1" }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }

[dev-dependencies]
mockito = "1.2.0"
